--- a/templates/account.html
+++ b/templates/account.html
@@ -16,24 +16,24 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-10 side-menu-title">
+              <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-menu-down"></span>
+                    <span class="glyphicon glyphicon-triangle-bottom"></span>
                     <h2>Reset Password</h2>
                   </span>  
                 </div>  
               </div>
             </div>
             <div class="row">
-              <div class="col-md-10">
+              <div class="col-md-12">
                 <p style="margin-bottom: 10px;">
                   Enter your current password and enter the new password in both validation fields to change password.
                 </p>
               </div>
             </div> 
             <div class="row">
-              <div class="col-md-8">
+              <div class="col-md-9">
                 <div class="panel panel-default">
                   <div class="panel-heading"><strong>Reset Password</strong></div>
                   <div class="panel-body form-horizontal">
