--- a/templates/cron.html
+++ b/templates/cron.html
@@ -7,16 +7,16 @@
           </div>
           <div class="col-md-10 animated fadeIn">
             <div class="row main-title">
-              <div class="col-md-6 title-content">
+              <div class="col-md-8 title-content">
                 <span class="glyphicon glyphicon-time"></span>
                 <h1><strong>Cron</strong></h1>
               </div>
-              <div class="col-md-6 title-breadcrumbs"> 
+              <div class="col-md-4 title-breadcrumbs"> 
                 <span><a href="#/">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Cron</strong></span>
               </div>
             </div>    
             <div class="row">
-              <div class="col-md-10 side-menu-title">
+              <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
                     <span class="glyphicon glyphicon-menu-down"></span>
@@ -26,13 +26,13 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-10">
-                <p style="margin-bottom: 30px;">
+              <div class="col-md-12">
+                <p style="margin-bottom: 10px;">
                   Use this field to manually set the next cron date and time. To turn off cron, set a date and time in the past.
                 </p>
               </div>
             </div> 
-            <div class="row">
+            <div class="row" style="margin-bottom: 15px;">
               <div class="col-md-8">
                 <div class="row">
                   <div class="col-md-5" style="padding-top: 10px;">
@@ -58,7 +58,7 @@
             </div>  
 
             <div class="row">
-              <div class="col-md-10 side-menu-title">
+              <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
                     <span class="glyphicon glyphicon-menu-down"></span>
@@ -68,7 +68,7 @@
               </div>
             </div>
             <div class="row ">
-              <div class="col-md-10">
+              <div class="col-md-12">
                 <p style="margin-bottom: 10px;">
                   Use this field to set the cron repeat interval. Current repeat interval: <strong>{{cronDetails.repeatInterval}} {{cronDetails.repeatUnits}}</strong>
                 </p>
